versioned_docs/version-2026.1.1/professor/jair_fajardo_junior.mdx
---
sidebar_label: 'Jair Fajardo Junior'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Jair Fajardo Junior",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Elementos de Automação - 198",
          "size": 2,
          "teachers": [
            "Jair Fajardo Junior"
          ],
          "classroom": "laboratorio_de_automacao_e_robotica_industrial",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Programação e Microcontroladores - 2587",
          "size": 3,
          "teachers": [
            "Jair Fajardo Junior"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "MEC2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Programação e Microcontroladores - 2587",
          "size": 3,
          "teachers": [
            "Jair Fajardo Junior"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "MEC2026"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Elementos de Automação - 112",
          "size": 2,
          "teachers": [
            "Jair Fajardo Junior"
          ],
          "classroom": "laboratorio_de_automacao_e_robotica_industrial",
          "students": [
            "ELM2025"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Sistemas Digitais - 1553",
          "size": 2,
          "teachers": [
            "Jair Fajardo Junior"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "EIN2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Jair Fajardo Junior

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

